# async-arch-course

./: README.md  docker-compose.yaml
accounting/: docker-compose.dev.yaml  pyproject.toml
accounting/app/: admin.py  constants.py  consumers.py  db.py  exceptions.py  main.py  models.py  repositories.py  scheduler.py  schemas.py  settings.py
accounting/migrations/: env.py
auth-service/: Dockerfile  docker-compose.dev.yaml  pyproject.toml
auth-service/app/: admin.py  constants.py  exceptions.py  main.py  models.py  repositories.py  schemas.py  (+1 more)
hw0/: README.md
hw1/: README.md
schema-registry/: pyproject.toml
schema-registry/schema_registry/: __init__.py
schema-registry/schema_registry/schemas/tasks/assigned/: 1.json  2.json
schema-registry/schema_registry/schemas/tasks/completed/: 1.json  2.json
schema-registry/schema_registry/schemas/tasks/created/: 1.json  2.json
schema-registry/schema_registry/schemas/tasks/newtaskcreated/: 1.json  2.json
schema-registry/schema_registry/schemas/tasks/updated/: 1.json  2.json
schema-registry/schema_registry/schemas/transactions/created/: 1.json
schema-registry/schema_registry/schemas/users/created/: 1.json
schema-registry/schema_registry/schemas/users/rolechanged/: 1.json
schema-registry/schema_registry/schemas/users/updated/: 1.json
task-tracker/: Dockerfile  pyproject.toml
task-tracker/app/: admin.py  constants.py  consumers.py  exceptions.py  main.py  models.py  repositories.py  schemas.py  settings.py
task-tracker/app/api/: tasks.py
task-tracker/app/use_cases/: kafka.py  tasks.py  users.py
task-tracker/migrations/versions/: 46ac12d711e5_add_jira_id_to_tasks.py  7882de39216b_add_users_and_tasks.py
(+15 files in other folders)
