[tool.poetry]
name = "schema-registry"
version = "0.1.8"
description = ""
authors = ["Nikita Vstovsky <nikvst@gmail.com>"]
readme = "README.md"
packages = [{include = "schema_registry"}]

[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
